# Project2_MachineOrientedProgramming-

./: .gitignore  CMakeLists.txt  Deck.txt  README.md  deck
Classes/: Emmasopgave.c  FileHandler.c  FileHandler.h  card.c  card.h  cards.h  deck.c  deck.h  fileHandler.c  fileHandler.h  main  main.c  main.h  move.c  move.h  previousMoves.c  previousMoves.h  yukon
text/: deck.txt
