cmake_minimum_required(VERSION 3.27)
project(Project2_MachineOrientedProgramming_)

set(CMAKE_CXX_STANDARD 14)

add_executable(Project2_MachineOrientedProgramming_
        Classes/deck.c
        README.md
        Classes/move.c
        Classes/main.c
        Classes/deck.h
        Classes/FileHandler.c
        Classes/FileHandler.h
)

