cmake_minimum_required(VERSION 3.27)
project(Project2_MachineOrientedProgramming_)

set(CMAKE_CXX_STANDARD 14)

add_executable(Project2_MachineOrientedProgramming_
        README.md
        Classes/main.c
        Classes/fileHandler.c
        Classes/main.h
        Classes/deck.h
        Classes/deck.c
        Classes/card.c
)

